force-app/main/default/objects/Opportunity/fields/Account_Estimate_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Account_Estimate_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Estimate Snapshot</label>
    <referenceTo>Account_Estimate_Snapshot__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>