force-app/main/default/objects/Opportunity/fields/Opportunity_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID 18</label>
    <type>Text</type>
</CustomField>